--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start"
   },
-"dependencies": {
-  "firebase": "^9.15.0",
-  "jspdf": "^2.5.1",
-  "html2canvas": "^1.4.1"
-}
-
+  "dependencies": {
+    "firebase": "^9.15.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "next": "^15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  }
 }
